--- a/index.html
+++ b/index.html
@@ -24,27 +24,19 @@
         </div>
 
         <p class="form-label">What do you want on your pizza?</p>
-        <div class="form-check">
-          <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" value="extracheese">
-          Extra cheese
-          </label>
-        </div>
-        <div class="form-check">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" value="pepperoni">
-            Pepperoni
-          </label>
-        </div>
-        <div class="form-check">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" value="chocolate">
-            Chocolate
-          </label>
-        </div>
-        <button type="submit" class="btn btn-warning btn-lg">Get the price for your order!</button>
+          <div class="form-group">
+            <input type="checkbox" name="topping" value="extracheese">Extra cheese</input>
+            <input type="checkbox" name="topping" value="chocolate">Chocolate</input>
+            <input type="checkbox" name="topping" value="sardines">Sardines</input>
+          </div>
+        <button id="button" type="button" name="button">Get the price for your order!</button>
         </form>
 
+        <div id="orderConfirmation">
+          <p>Your order</p>
+          <ul id="yourOrder">
+          </ul>
+        </div>
     </div><!--close container-->
 
   </body>
