Add functionality to gather user choices and return an order price

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           <p class="form-label">What size pizza do you want?</p>
           <label for="size">Choose one</label>
           <select class="form-control" id="size">
-            <option value="1">Small (serves 1)</option>
-            <option value="2">Medium (serves 2-3)</option>
-            <option value="3">Large (serves 3-4)</option>
-            <option value="4">Gigantic (so big, we hope you're throwing a party)</option>
+            <option value="small">Small (serves 1)</option>
+            <option value="medium">Medium (serves 2-3)</option>
+            <option value="large">Large (serves 3-4)</option>
+            <option value="gigantic">Gigantic (so big, we hope you're throwing a party)</option>
           </select>
         </div>
 
@@ -33,7 +33,6 @@
         </form>
 
         <div id="orderConfirmation">
-          <p>Your order</p>
           <ul id="yourOrder">
           </ul>
         </div>
